--- a/cohabitify/backend/.env
+++ b/cohabitify/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb+srv://harshita0518be23_db_user:harshita@cluster0.r6y0y5d.mongodb.net/cohabitify?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://harshita0518be23_db_user:harshita@cluster0.r6y0y5d.mongodb.net/cohabify?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
 JWT_EXPIRE=30d
 BCRYPT_ROUNDS=12
